{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 8,
  "lineage": "3bf19f41-d22a-891b-4aac-b23a68feceb4",
  "resources": [
    {
      "module": "module.ec2_prov",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00399ec92321828f5",
            "arn": "arn:aws:ec2:us-east-2:031926628442:instance/i-0edf9008829db20c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0edf9008829db20c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Trf-pract",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f9b0df77ed0e8550",
            "private_dns": "ip-10-0-1-132.us-east-2.compute.internal",
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-3-143-242-93.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.242.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0559b49ec64ee95f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02956c681bf8e1eb3",
            "tags": {
              "Name": "ec2-with-module"
            },
            "tags_all": {
              "Name": "ec2-with-module"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a17c026a9b3d6701"
            ]
          },
          "dependencies": [
            "module.prod_vpc.aws_security_group.allow_ssh",
            "module.prod_vpc.aws_subnet.public_1",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:internet-gateway/igw-019c2edab339dc5fe",
            "id": "igw-019c2edab339dc5fe",
            "owner_id": "031926628442",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "tags_all": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-0529487e3ff343171"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:route-table/rtb-0ad581d1d55b7750a",
            "id": "rtb-0ad581d1d55b7750a",
            "owner_id": "031926628442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-019c2edab339dc5fe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "tags_all": {
              "Name": "public-route-table-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0529487e3ff343171"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.gw",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1c049ec0a3e2a18",
            "route_table_id": "rtb-0ad581d1d55b7750a",
            "subnet_id": "subnet-02956c681bf8e1eb3"
          },
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.gw",
            "module.prod_vpc.aws_route_table.route-public",
            "module.prod_vpc.aws_subnet.public_1",
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:security-group/sg-0a17c026a9b3d6701",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a17c026a9b3d6701",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "031926628442",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0529487e3ff343171"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:subnet/subnet-02956c681bf8e1eb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02956c681bf8e1eb3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031926628442",
            "tags": {
              "Name": "public_1-demo"
            },
            "tags_all": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-0529487e3ff343171"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_demo"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:031926628442:vpc/vpc-0529487e3ff343171",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f61491e3e42ddbc3",
            "default_route_table_id": "rtb-0aaa8f99e5bfbcc8a",
            "default_security_group_id": "sg-0bb03094737f7e92c",
            "dhcp_options_id": "dopt-bd5b39d6",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0529487e3ff343171",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aaa8f99e5bfbcc8a",
            "owner_id": "031926628442",
            "tags": {
              "Name": "Vpc-custom-demo"
            },
            "tags_all": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}